k8s/base/auth-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
